2010-08-07

2010-08-06
Lots of big API changes, see REPO

2010-07-28
Debugged menu system
Debbuged a bunch of stuff
Now I can add new features
Made improvements to url() API

2010-07-27
Made big changes
Added new menu API
	Still needs work
	updated all the URLs across the site
System works mostly

2010-07-27
Made lots of changes
Improved trigger API
Improved initializing sequences
	Got rid of setup function in common
	Made settings more abstract and improved the API
	Moved around modules in to different folders
Finished implementing getid3 for archives
Improved error API greatly
	Improved printing out errors in template
	Improved verbosity options in core and common
Improved installation
If dependencies fail, now shows standard error page
	Setup is called even on failed required modules, it's really just for show anyways
Added API for changing the way URLs are created and the way URLs are read
	Basically mimicing the drupal functionality of menu call backs

2010-07-21
Finished implementing alter_query stuff
Worked on forms API, moved all methods to include/forms.php
	Created API for fieldsets
Implemented packages for listing modules in groups
Fixed users to be a little more stable
	setup_users() now just sets the session('users') to guest account if it is empty
	session_users() not checks for a password setting when logging in
Handlers that can only be used with a database should list 'database' in the 'depends on' config option

2010-07-18
Changed a lot then reverted
site uses raise_error() custom function because it doesn't generate an E_Strict notice

2010-07-18
Created a module for all the bulk rename functionality
Fixed files module, now checks is_readable in _get_local_files()
Fixed updates.php, also check is_readable in handles_updates()
Removed module suffling, no longer necissary for testing
Lots of minor fixes, see repo log

2010-07-15
Fixed core.php parse_path_info() function to remove the html_root before parsing the path