@@ -613,6 +613,7 @@ function _get_database_files($request, &$count)
 	$limit = array();
 	$order = array();
 	$group = array();
+	$columns = array('*');
 	foreach($result as $key => $alteration)
 	{
 		if(is_array($alteration))
@@ -621,11 +622,13 @@ function _get_database_files($request, &$count)
 			if(isset($alteration['limit'])) $limit[] = $alteration['limit'];
 			if(isset($alteration['order'])) $order[] = $alteration['order'];
 			if(isset($alteration['group'])) $group[] = $alteration['group'];
+			if(isset($alteration['columns'])) $columns[] = $alteration['columns'];
 		}
 	}
 	
 	// select files
-	$files = db_assoc('SELECT * FROM ' . $request['handler'] . ' ' . 
+	$files = db_assoc('SELECT ' . ((count($columns) > 0)?implode(', ', $columns):'') . 
+		' FROM ' . $request['handler'] . ' ' . 
 		((count($where) > 0)?('WHERE (' . implode(') AND (', $where) . ') '):'') . 
 		((count($order) > 0)?('ORDER BY ' . implode(', ', $order)):'') . ' ' .
 		((count($limit) > 0)?('LIMIT ' . $limit[0]):'')
