@@ -233,53 +233,6 @@ body {
 	width:100%;
 }
 
-#footer {
-	margin-top:0.42em;
-}
-
-#footerCtr {
-	border-color:#F7F3F7;
-	background-color:transparent;
-	border-top-style:solid;
-	border-top-width:1px;
-	color:#444444;
-	font-size:100%;
-	width:100%;
-}
-
-#footerCtr td {
-	padding:8px 0;
-	vertical-align:top;
-}
-
-#footerCtr ul {
-	list-style-image:none;
-	list-style-position:outside;
-	list-style-type:none;
-	margin:0;
-	padding:0;
-	display:inline;
-}
-
-#footerCtr ul li {
-	border-right-style:solid;
-	border-right-width:1px;
-	float:left;
-	padding:0 8px;
-	margin:0 0 3px;
-	display:inline;
-}
-
-#footerCtr ul li a {
-	color:#444444;
-	text-decoration:none;
-	font-weight:inherit;
-}
-
-#footerCtr ul li.last {
-	border-right-style:none;
-}
-
 .hover {
 	display:block;
 	border:1px solid #D8F0FA;
